css/styles.css
body {
    font-family: Arial, sans-serif;
    margin: 0;
    padding: 0;
    background-color: #f9f9f9;
}

header {
    background-color: #f8f9fa;
    color: #212529;
    padding: 20px;
    text-align: center;
}

nav ul {
    list-style-type: none;
    padding: 0;
}

nav ul li {
    display: inline;
    margin-right: 10px;
}

nav ul li a {
    text-decoration: none;
    color: #333;
}

table {
    margin: auto;
    width: 100%;
    max-width: 600px;
}

td, th {
    border: 1px solid #ddd;
    padding: 8px;
    word-wrap: break-word;
    max-width: 200px;
}

th {
    padding-top: 12px;
    padding-bottom: 12px;
    text-align: left;
    background-color: #007bff;
    color: white;
}

tr:nth-child(even) {
    background-color: #f2f2f2;
}

form {
    width: 90%;
    max-width: 600px;
    margin: 20px auto;
}

select, button {
    width: 100%;
    padding: 10px;
    margin: 10px 0;
    box-sizing: border-box;
}

button {
    background-color: #007bff;
    color: white;
    border: none;
    cursor: pointer;
}

button:hover {
    opacity: 0.8;
}

footer {
    background-color: #f8f9fa;
    color: #212529;
    text-align: center;
    padding: 20px;
    position: fixed;
    width: 100%;
    bottom: 0;
}

footer p {
    margin: 0;
}

footer a {
    text-decoration: none;
    color: #333;
}

@media (max-width: 600px) {
    footer {
        position: relative;
    }
}

.footer-spacer {
    height: 60px;
}

.pagination {
    display: flex;
    justify-content: center;
    margin: 20px auto;
    max-width: 600px;
}

.pagination button {
    margin: 0 5px;
    padding: 5px 10px;
    font-size: 14px;
    border-radius: 5px;
    border: none;
    color: white;
    background-color: #007bff;
    transition: background-color 0.3s ease;
}

.pagination button:hover {
    background-color: #0056b3;
}

.pagination button:disabled {
    background-color: #ccc;
    cursor: not-allowed;
}

#citySwitch {
    text-align: center;
    margin-bottom: 20px;
    display: flex;
    justify-content: center;
    max-width: 90%;
    margin: auto;
}

#citySwitch button {
    margin: 0 10px;
    padding: 5px;
    font-size: 14px;
    border-radius: 5px;
    border: none;
    color: white;
    background-color: #007bff;
    transition: background-color 0.3s ease;
    white-space: nowrap;
}

